--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #94eebd;
+  background-color: #dfdfdf;
 }
 
 /* navbar */
@@ -87,51 +87,16 @@ section {
   background-color: #dfdfdf;
 }
 /*flipcard*/
-.box {
-  background-color: rgb(186, 233, 233);
-  box-shadow: 0 0 0 1px #bce7e9;
-  padding: 30px 10px;
-  position: relative;
-  z-index: 0;
-  transition: 0.2s all;
+#team img {
+  margin-top: -50px;
 }
-.box:hover {
-  z-index: 1;
-  box-shadow: 0 8px 50px rgba(0, 0, 0, 0, 2);
-  transform: scale(1.06);
-}
-.box .avtar {
-  width: 100px;
-  height: 100px;
-  border-radius: 60%;
-  overflow: hidden;
-  margin: 20px;
-}
-.box .box_content {
-  margin: 10px 0;
-}
-.box .box_content .title {
-  color: #313435;
-  font-family: 'roboto', sans-serif;
-  font-size: 18px;
+#team p {
   font-weight: 500;
-  line-height: 1.4rem;
-  margin: 0;
 }
-.box .box_content .post {
-  font-family: 'roboto', sans-serif;
-  font-size: 14px;
-  line-height: 2.375rem;
-  color: #6f808a;
-}
-.box .icons {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-.box .icons li {
-  display: inline-block;
-  margin: 0 10px;
+#team .card {
+  border-radius: 30%0%;
+  background-color: rgb(158, 199, 189);
+  box-shadow: 5px 5px 15px #050404;
 }
 /* dekstop version */
 @media (min-width: 992px) {
